17-3-8 10-37 Signed-off-by: gaofeng <gaofeng3695@126.com>

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -373,6 +373,7 @@
     <script type="text/javascript" src="/lib/js/amrnb.js"></script>
     <script type="text/javascript" src="/lib/js/amrnb-play.js"></script>
 
+    <script type="text/javascript" src="/src/js/common/bootstrap.modal.alert.js"></script>
     <script src="/src/js/common/common.js"></script>
     <script src="/src/js/common/html5-storage.js"></script>
     <script src="/src/js/common/dispose_common.js"></script>
