--- a/src/html/map.html
+++ b/src/html/map.html
@@ -137,9 +137,9 @@
                     -
                 </div>
                 <span class="time">
-                    <span class="now">1:23:23</span>
+                    <span class="now">-</span>
                 <span> / </span>
-                <span class="end">1:56:23</span>
+                <span class="end">-</span>
                 </span>
                 <div class="speed">
                     <span>播放速度：</span>
@@ -151,7 +151,7 @@
                 </div>
             </div>
             <div class="time_line">
-                <div class="btn_play active"></div>
+                <div class="btn_play "></div>
                 <div class="border"></div>
                 <div class="line_wrapper">
                     <div class="line_bar">
@@ -160,10 +160,10 @@
                             <!--<div class="stick"></div>-->
                         </div>
                         <div class="time_mark">
-                            <div class="time">23:23:23</div>
+                            <div class="time">-</div>
                         </div>
                         <div class="move_bar"></div>
-                        <div class="time_now">13:15:12</div>
+                        <div class="time_now">1</div>
                     </div>
                 </div>
             </div>
@@ -174,7 +174,10 @@
     <script src="/lib/js/jquery-1.12.4.min.js"></script>
     <script src="/src/js/common/map.js"></script>
     <script src="/src/js/common/common.js"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/library/DistanceTool/1.2/src/DistanceTool_min.js"></script>
     <script src="/src/js/map.js"></script>
+    <script src="/src/js/map/map1.js"></script>
+
 </body>
 
 </html>
