17-3-9 Signed-off-by: gaofeng <gaofeng3695@126.com>

--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
     <div id="bgcontent" style="background-size: cover;filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/src/images/loginImg/loginbg.jpg',sizingMethod='scale');">
         <div class="loginContent">
             <div class="poskuai">
+                <div style="padding-left:20px;padding-top:20px;font-size:16px;color: #5EB6F9;">免费试用</div>
                 <div class="message">
                     <div class="logoImg"></div>
                     <div class="info">
