--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,6 @@
     <base target="_parent">
     <link href="/lib/css/bootstrap.css" rel="stylesheet">
     <link href="/lib/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
-
     <link href="/lib/css/zTreeStyle.css" rel="stylesheet">
     <link href="/src/css/index.css" rel="stylesheet">
     <link href="/src/css/dispose_common.css" rel="stylesheet">
@@ -37,7 +36,6 @@
                     <div class="title">本日最新任务</div>
                     <div class="qtty"><span class="num">--</span><span>起</span></div>
                 </div>
-
                 <!--<div class="col-lg-3 col-md-6">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
@@ -84,7 +82,6 @@
                         暂无任务信息
                     </div>
                     <div id="taskList_wrapper" class="wrapper">
-
                         <!--<div class="line">
                                 <div class="line_title">
                                     <span class="person">item.createUserName</span>
@@ -197,7 +194,6 @@
             <!-- /.row -->
         </div>
     </div>
-
     <!--处置填写-->
     <div id="dispose" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" data-backdrop="static">
         <div class="modal-dialog modal-lg" role="document">
@@ -238,7 +234,6 @@
                                     </div>
                                 </div>
                             </div>
-
                             <div class="form_list">
                                 <div class="list_left text-right">
                                     信息描述
@@ -306,7 +301,6 @@
             </div>
         </div>
     </div>
-
     <!--详情窗口-->
     <div id="details" class="modal fade bs-example-modal-lg" data-backdrop="static" tabindex="-1" role="dialog">
         <div class="modal-dialog modal-lg" role="document">
@@ -361,6 +355,7 @@
     </div>
     <script src="/lib/js/jquery-1.12.4.min.js"></script>
     <script src="/lib/js/echarts.simple.min.js"></script>
+    <script src="/src/js/common/bootstrap.modal.alert.js"></script>
 
     <script type="text/javascript" src="/lib/js/jquery.ztree.all.min.js"></script>
     <script type="text/javascript" src="/lib/js/bootstrap.min.js"></script>
@@ -368,19 +363,15 @@
     <script type="text/javascript" src="/src/js/event/ajaxFileUpload.js"></script>
     <script type="text/javascript" src="/lib/js/common_base.js"></script>
     <script type="text/javascript" src="/lib/js/bootstrap-datetimepicker.min.js"></script>
-
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=FaToVuVSNebaox7B0uLYEKhPH8Fpu7Rr"></script>
     <script type="text/javascript" src="/lib/js/amrnb.js"></script>
     <script type="text/javascript" src="/lib/js/amrnb-play.js"></script>
-
     <script type="text/javascript" src="/src/js/common/bootstrap.modal.alert.js"></script>
     <script src="/src/js/common/common.js"></script>
     <script src="/src/js/common/html5-storage.js"></script>
     <script src="/src/js/common/dispose_common.js"></script>
     <script src="/src/js/common/details_common.js"></script>
     <script src="/src/js/index.js"></script>
-
-
 </body>
 
 </html>
