--- a/src/html/map.html
+++ b/src/html/map.html
@@ -7,16 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="/lib/css/bootstrap.css" rel="stylesheet">
     <link href="/src/css/map.css" rel="stylesheet">
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=FaToVuVSNebaox7B0uLYEKhPH8Fpu7Rr"></script>
+    <link href="/src/css/map_test.css" rel="stylesheet">
+    <link href="/src/css/task.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="mdl_wrapper">
+        <!-- 左上角tab切换 开始-->
         <div class="tab_wrapper">
             <ul class="item_wrapper">
                 <li id="people_title" class="item" data-tab="people">人员信息</li>
                 <li class="border"></li>
-                <li id="event_title" class="item" data-tab="event">事件信息</li>
+                <li id="event_title" class="item" data-tab="event" onclick="show_point()">事件信息</li>
                 <li class="border"></li>
                 <li id="location_title" class="item" data-tab="location">地图搜索</li>
                 <li class="border"></li>
@@ -55,16 +57,16 @@
                 </div>
                 <div id="event" class="hide sub_wrapper">
                     <div class="title">
-                        <span>处理中事件<span class="num">20</span></span>
-                        <span>本日新增事件<span class="num">12</span></span>
+                        <span>处理中事件<span class="num inhand">20</span></span>
+                        <span>本日新增事件<span class="num newevent">12</span></span>
                         <span class="close_btn">X</span>
                     </div>
                     <div class="search_wrapper">
-                        <input class="" type="text" placeholder="搜索事件关键词">
-                        <span class=""></span>
+                        <input class="" type="text" placeholder="搜索事件关键词" id="search">
+                        <span class="" onclick="quite()"></span>
                     </div>
                     <div class="event result">
-                        <ul>
+                        <!--<ul>
                             <li class="active">
                                 <div class="line01">
                                     <span class="type">自然灾害-泥石流</span>
@@ -95,7 +97,7 @@
                                     北京市海淀区学院路33号北京科技大学西门
                                 </div>
                             </li>
-                        </ul>
+                        </ul>-->
                     </div>
                 </div>
                 <div id="location" class="hide sub_wrapper">
@@ -130,7 +132,9 @@
                 </div>
             </div>
         </div>
-        <div class="player_wrapper">
+        <!-- 左上角tab切换 结束-->
+        <!-- 播放器 开始 -->
+        <div class="player_wrapper" style="display: none">
             <div class="btn_close">x</div>
             <div class="title">
                 <div class="date">
@@ -162,22 +166,293 @@
                         <div class="time_mark">
                             <div class="time">-</div>
                         </div>
+                        <div class="time_now">-</div>
+                        <div class="mask_bar"></div>
                         <div class="move_bar"></div>
-                        <div class="time_now">1</div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- 播放器 结束 -->
+        <!-- 地图容器 开始 -->
         <div id="container" class="map_wrapper">
         </div>
+        <!-- 地图容器 结束 -->
     </div>
-    <script src="/lib/js/jquery-1.12.4.min.js"></script>
-    <script src="/src/js/common/map.js"></script>
-    <script src="/src/js/common/common.js"></script>
+    <!--人员与事件图层控制-->
+    <div class="change">
+        <div class="renyuan fl">人员<img class="changeImg" src="/src/images/map/close.png" alt=""></div>
+        <div class="shijian fr pr30">事件<img class="changeImg" src="/src/images/map/close.png" alt=""></div>
+    </div>
+    <!--人员信息列表-->
+    <div class="panel-group" id="accordion">
+        <!--<div class="null"></div>-->
+        <div class="personnel"><span>人员</span><span class="closeInformation fr pr10">X</span></div>
+        <div class="message">
+            <div class="essentialInformation">
+                <div class="peopleInformation">
+                    <div class="left fl"><img style="width:100%;height:100%;" src="/src/images/map/close.png" alt=""></div>
+                    <div class="right fl">
+                        <p><span class="pr5">张三</span><img style="width:15px;height:15px;" src="/src/images/map/line.png" alt=""></p>
+                        <p><span class="pr5">男</span><img style="width:13px;height:13px;" src="/src/images/map/nan.png" alt=""></p>
+                        <p><span class="pr15">巡检一部</span><span>巡检工</span></p>
+                        <p><img style="width:10px;height:17px;" src="/src/images/map/phone.png" alt=""><span class="pl5">18829250216</span></p>
+                    </div>
+                </div>
+                <div class="patrolInformation">
+                    <p>本日巡检次数&nbsp;&nbsp;&nbsp;<span class="borderLeft">1</span></p>
+                    <p>本日巡线里程&nbsp;&nbsp;&nbsp;<span class="borderLeft">14km</span></p>
+                    <p>本日事件上报&nbsp;&nbsp;&nbsp;<span class="borderLeft">1起</span></p>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title font14">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">巡检记录</a>
+                    <span class="glyphicon glyphicon1 glyphicon-menu-up fr"></span>
+                </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse in">
+                <div class="panel-body">
+                    <div class="searchStyle">
+                        <div class="fl"><input class="inputStyle form_datetime" readonly id="datetimeStart" type="text" placeholder="开始时间">&nbsp;至&nbsp;</div>
+                        <div class="fl"><input class="inputStyle form_datetime" readonly id="datetimeEnd" type="text" placeholder="结束时间"></div>
+                        <button class="fl buttonStyle">搜索</button>
+                    </div>
+                    <div class="record_details">
+                        <p class="pb10 pt10"><span class="fr5 width">开始时间</span><span class="borderLeft fl block">2016-12-15 14:53</span></p>
+                        <p class="pb10 pt10"><span class="fr5 width">结束时间</span><span class="borderLeft fl block">2016-12-15 14:53</span></p>
+                        <p class="pb10 pt10"><span class="fr5 width">时长</span><span class="borderLeft fl block">1小时30分</span></p>
+                        <p class="pb10 pt10"><span class="fr5 width">巡线状态</span><span class="borderLeft fl block">已完成</span></p>
+                        <p class="pb10 pt10"><span class="fr5 width">总里程</span><span class="borderLeft fl block">15KM</span></p>
+                        <p class="pb10 pt10" style="height:23px;line-height:23px"><span class="fr5 width">轨迹回放</span><span class="borderLeft fl block"><img src="/src/images/map/bofang.png" alt=""></span></p>
+                    </div>
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination pagination-sm">
+                            <li><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li><a href="#">...</a></li>
+                            <li><a href="#" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title font14">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">事件记录</a>
+                    <span class="glyphicon glyphicon2 glyphicon-menu-down fr"></span>
+                </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <div class="searchStyle">
+                        <div class="fl"><input class="inputStyle form_datetime" readonly id="timeStart" type="text" placeholder="开始时间">&nbsp;至&nbsp;</div>
+                        <div class="fl"><input class="inputStyle form_datetime" readonly id="timeEnd" type="text" placeholder="结束时间"></div>
+                        <button class="fl buttonStyle">搜索</button>
+                    </div>
+                    <div class="record_details">
+                        <p class="pb10 pt10"><span class="fr5 width fl5">事件时间</span><span class="borderLeft fl block">2016-12-15 14:53</span></p>
+                        <p class="pb10 pt10"><span class="fr5 width">事件类型</span><span class="borderLeft fl block">自然灾害</span></p>
+                        <p class="pb10 pt10"><span class="fr5 width">上报人</span><span class="borderLeft fl block">张三</span></p>
+                        <p class="pb10 pt10"><span class="fr5 width">时间状态</span><span class="borderLeft fl block">已完成</span></p>
+                        <button class="viewDetails">查看详情</button>
+                    </div>
+                    <nav aria-label="Page navigation">
+                        <ul class="pagination pagination-sm">
+                            <li style="width:28px;">
+                                <a href="#" aria-label="Previous" style="width:28px;">
+                                    <span aria-hidden="true">&laquo;</span>
+                                </a>
+                            </li>
+                            <li><a href="#">1</a></li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li style="width:28px;"><a style="width:28px;" href="#">...</a></li>
+                            <li style="width:28px;">
+                                <a href="#" aria-label="Next" style="width:28px;">
+                                    <span aria-hidden="true">&raquo;</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--事件信息列表-->
+    <div class="event_list">
+        <div class="event"><span>事件</span><span class="fr pr10">X</span></div>
+        <div class="event_detail">
+            <div class="event_show">
+                <div class="event_tab">
+                    <div class="left">
+                        <span class="event_desc">事件编号</span>
+                    </div>
+                    <div class="right">
+                        <span class="event_content event_code">2016121153408117</span>
+                    </div>
+                </div>
+                <div class="event_tab">
+                    <div class="left">
+                        <span class="event_desc">事件类型</span>
+                    </div>
+                    <div class="right">
+                        <span class="event_content event_type">第三方施工-占压</span>
+                    </div>
+                </div>
+                <div class="event_tab">
+                    <div class="left">
+                        <span class="event_desc">事件时间</span>
+                    </div>
+                    <div class="right">
+                        <span class="event_content event_date"></span>
+                    </div>
+                </div>
+                <div class="event_tab">
+                    <div class="left">
+                        <span class="event_desc">上报人</span>
+                    </div>
+                    <div class="right">
+                        <span class="event_content report_man">刘迪</span>
+                    </div>
+                </div>
+                <div class="event_tab">
+                    <div class="left">
+                        <span class="event_desc">地图位置</span>
+                    </div>
+                    <div class="right address">
+                        <span class="event_content event_address">北京市海淀区北四环中路科大天工大厦
+                                </span>
+                    </div>
+                </div>
+                <div class="event_tab">
+                    <div class="left">
+                        <span class="event_desc ">事件描述</span>
+                    </div>
+                </div>
+                <div class="event_tab">
+                    <span class="event_description"></span>
+                </div>
+                <div class="event_tab">
+                    <div class="left">
+                        <span class="event_desc">语音</span>
+                    </div>
+                    <div class="right ">
+                        <span class="event_content event_audio">
+                                </span>
+                    </div>
+                </div>
+            </div>
+            <div class="event_image">
+                <div class="event_tab">
+                    <div class="left">
+                        <span class="event_desc">图片</span>
+                    </div>
+                    <div class="right">
+                        <span class="pic_des"></span>
+                    </div>
+                </div>
+                <div class="event_tab eventpic_list">
+                </div>
+            </div>
+            <div class="view_detail">
+                <button type="button" onclick="view_detail()" class="btn">查看详情</button>
+            </div>
+        </div>
+    </div>
+    <!--事件查看详情-->
+    <div id="details" class="modal fade bs-example-modal-lg" data-backdrop="static" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3>事件详情<a class="close" data-dismiss="modal">×</a></h3>
+                </div>
+                <div class="modal-body">
+                    <ul class="nav nav-tabs nav_details" role="tablist">
+                        <li role="presentation" class="active"><a href="#eventDetails" aria-controls="home" role="tab" data-toggle="tab">事件详情</a></li>
+                        <li role="presentation"><a href="#taskDetails" aria-controls="profile" role="tab" data-toggle="tab">任务处置</a></li>
+                    </ul>
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="eventDetails">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-md-2 col-sm-2 text-right details_title">事件编号</div>
+                                    <div class="col-md-4 col-sm-4 details_text event_code"></div>
+                                    <div class="col-md-2 col-sm-2 text-right details_title">事件时间</div>
+                                    <div class="col-md-4 col-sm-4 details_text occurrenceTime"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-2 col-sm-2 text-right details_title">事件类型</div>
+                                    <div class="col-md-4  col-sm-4 details_text event_type"></div>
+                                    <div class="col-md-2 col-sm-2 text-right details_title">上报人</div>
+                                    <div class="col-md-4  col-sm-4 details_text report_man"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-2 col-sm-2 text-right details_title">地理位置</div>
+                                    <div class="col-md-10  col-sm-10 details_text details_map_main">
+                                        <p class="address event_address"></p>
+                                        <div id="details_address_map"></div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-2 col-sm-2 text-right details_title">事件描述</div>
+                                    <div class="col-md-10  col-sm-10 details_text event_description"></div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-2 col-sm-2 text-right details_title">语音描述</div>
+                                    <div class="col-md-10 details_text col-sm-10 event_audio">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-2 col-sm-2 text-right details_title">照片</div>
+                                    <div class="col-md-10 details_text  col-sm-10 eventpic_list">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane " id="taskDetails">
+                            <div class="dispose_title">
+                                <p>任务编号：<span class="taskCode"></span></p>
+                            </div>
+                            <div class="dispose_content">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn" data-dismiss="modal">取消</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript" src="/lib/js/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="/lib/js/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript" src="/lib/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/lib/js/amrnb.js"></script>
+    <script type="text/javascript" src="/lib/js/amrnb-play.js"></script>
+    <script type="text/javascript" src="/lib/js/jquery.ztree.all.min.js"></script>
+    <script type="text/javascript" src="/lib/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/lib/js/bootstrap-table.min.js"></script>
+    <script type="text/javascript" src="/lib/js/bootstrap-table-zh-CN.min.js"></script>
+    <script type="text/javascript" src="/lib/js/bootstrap-datetimepicker.min.js"></script>
+    <script type="text/javascript" src="/lib/js/common_base.js"></script>
+    <script type="text/javascript" src="/src/js/common/linq.min.js"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=FaToVuVSNebaox7B0uLYEKhPH8Fpu7Rr"></script>
     <script type="text/javascript" src="http://api.map.baidu.com/library/DistanceTool/1.2/src/DistanceTool_min.js"></script>
+    <script src="/src/js/common/html5-storage.js"></script>
+    <!--<script src="/src/js/picture/eventdetail.js"></script>-->
+    <script src="/src/js/common/mapObj.js"></script>
     <script src="/src/js/map.js"></script>
-    <script src="/src/js/map/map1.js"></script>
-
+    <!--<script src="/src/js/map/map1.js"></script>-->
 </body>
 
 </html>
